create endpoint to update a circle
